Brainless manual cleanup